# pi-gpio-latency-meter

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  latency_meter.py  plot.py  pyproject.toml  requirements.txt  sim_backend.py
.github/workflows/: ci.yml
docs/: methodology.md  pinout.md
examples/: run_real.sh  run_sim.sh
scripts/: env_check.sh  set_governor_performance.sh
systemd/: gpio-latency-meter.service  latency-meter.service
tests/: test_stats.py
