[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-gpio-latency-meter"
version = "1.0.0"
description = "Professional GPIO latency measurement tool for Raspberry Pi"
readme = "README.md"
license = {text = "MIT"}

homepage = "https://github.com/kemalerbakirci/pi-gpio-latency-meter"
repository = "https://github.com/kemalerbakirci/pi-gpio-latency-meter"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Hardware",
    "Topic :: System :: Benchmark",
]
keywords = ["raspberry-pi", "gpio", "latency", "performance", "measurement"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
gpio = [
    "gpiod; platform_system=='Linux'",
]
pigpio = [
    "pigpio; platform_system=='Linux'",
]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "pre-commit>=2.0",
]
all = [
    "gpiod; platform_system=='Linux'",
    "pigpio; platform_system=='Linux'",
    "pytest>=6.0",
    "black>=22.0", 
    "isort>=5.0",
    "flake8>=4.0",
    "pre-commit>=2.0",
]

[project.scripts]
pi-latency-meter = "latency_meter:main"
pi-latency-plot = "plot:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["latency_meter.py", "sim_backend.py", "plot.py"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "hardware: marks tests that require real hardware",
]
